--- a/study/biology/生物.md
+++ b/study/biology/生物.md
@@ -23,3 +23,5 @@ https://ja.wikipedia.org/wiki/%E7%94%9F%E7%89%A9
 https://x.com/AsaiLabot2/status/1813209165780684888
 
 オスはメスと接触するために派手な色になりがちなので食べられやすい。
+
+寒い地域の生き物は鼻が長くなりがち。冷たい空気をある程度温めてから肺に取り込める。
