--- a/shared/biology/生存競争.md
+++ b/shared/biology/生存競争.md
@@ -6,3 +6,5 @@
 近縁種ほど少し上位の種との競争に負けやすくて、近縁が残ってないのかも。混血もあって統合されやすいだろうし。
 
 生存競争は「競争」ではなく「生き残り（サバイバル）」なので、勝つ必要はない。
+
+進化した種が生存競争に勝つのではなくて、生存競争に勝った種を進化したと言っているだけ。
