--- a/shared/biology/生物.md
+++ b/shared/biology/生物.md
@@ -25,3 +25,6 @@ https://x.com/AsaiLabot2/status/1813209165780684888
 オスはメスと接触するために派手な色になりがちなので食べられやすい。
 
 寒い地域の生き物は鼻が長くなりがち。冷たい空気をある程度温めてから肺に取り込める。
+
+魚や爬虫類、両生類は基本的に横向きに足が生えてる。
+恐竜から進化した鳥類や哺乳類は下向きに足が生えてる。
